<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PowerManngerActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_isScreenOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button_isScreenOn" />

        <Button
            android:id="@+id/button_goToSleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button_goToSleep" />

        <Button
            android:id="@+id/button_wakeUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button_wakeUp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_reboot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button_reboot" />

    </LinearLayout>

    <EditText
        android:id="@+id/editText_pm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout2"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textMultiLine" />

</RelativeLayout>