<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WIFIActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/toggleButton_wifi_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ToggleButton_wifi" />

        <Button
            android:id="@+id/button_wifi_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button_wifi_info" />

        <Button
            android:id="@+id/button_p2p_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button_p2p_info" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1" >

        <Button
            android:id="@+id/button_wifi_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button_wifi_scan" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2" >

        <EditText
            android:id="@+id/editText_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="textMultiLine" >
        </EditText>
    
    </ScrollView>

</RelativeLayout>