<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BTActivity" >

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/button_bt_socket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button_bt_socket" />

        <Button
            android:id="@+id/button_bt_hidWrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button_bt_hidWrite" />

        <Button
            android:id="@+id/button_bt_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button_clean" />

    </LinearLayout>

    <EditText
        android:id="@+id/editText_bt_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout3"
        android:ems="10"
        android:focusable="false"
        android:inputType="textMultiLine"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical" />

</RelativeLayout>